--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
                 <a href="pages/resume.html">
                     <i class="far fa-file-alt"></i>
-                    <span>Resume</span>
+                    <span>Parcours</span>
                 </a>
                 <a href="pages/work.html">
                     <i class="fas fa-briefcase icon-outline"></i>Work</a>
