--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
                 </a>
                 <a href="pages/resume.html">
                     <i class="far fa-file-alt"></i>
-                    <span>Resume</span>
+                    <span>Parcours</span>
                 </a>
                 <a href="work.html">
                     <i class="fas fa-briefcase icon-outline"></i>Work</a>
