--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span>Parcours</span>
                 </a>
                 <a href="pages/work.html">
-                    <i class="fas fa-briefcase icon-outline"></i>Work</a>
+                    <i class="fas fa-briefcase icon-outline"></i>Portfolio</a>
                 <a href="pages/contact.html">
                     <i class="far fa-envelope"></i>Contact
                 </a>
