--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
                     <span>Parcours</span>
                 </a>
                 <a href="work.html">
-                    <i class="fas fa-briefcase icon-outline"></i>Work</a>
+                    <i class="fas fa-briefcase icon-outline"></i>Portfolio</a>
                 <a href="contact.html"  class="active">
                     <i class="far fa-envelope"></i>Contact
                 </a>
