--- a/pages/resume.html
+++ b/pages/resume.html
@@ -27,7 +27,7 @@
                     <span>Parcours</span>
                 </a>
                 <a href="work.html">
-                    <i class="fas fa-briefcase icon-outline"></i>Work</a>
+                    <i class="fas fa-briefcase icon-outline"></i>Portfolio</a>
                 <a href="contact.html">
                     <i class="far fa-envelope"></i>Contact
                 </a>
