ajout d'une experience professionnelle

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -137,21 +137,26 @@
                                 </h3>
                                 <div class="service ">
                                     <div class="service-card">
+                                        <p><em>Février 2025 - Aujourd'hui</em></p>
+                                        <p><strong>Progistack</strong></p>
+                                        <p>Développeur Python - Odoo</p>
+                                    </div>
+                                    <div class="servic-card">
                                         <p><em>Décembre 2024 - Février 2025</em></p>
                                         <p><strong>Nomad App</strong></p>
                                         <p>Développeur Mobile Junior</p>
                                     </div>
-                                    <div class="servic-card">
+                                    <div class="service-card">
                                         <p><em>Avril 2024 - Janvier 2025</em></p>
                                         <p><strong>Orange Digital Center</strong></p>
                                         <p>Développeur Mobile</p>
                                     </div>
-                                    <div class="service-card">
+                                    <div class="servic-card">
                                         <p><em>Aout 2023 - Novembre 2023</em></p>
                                         <p><strong>BTECH CI</strong></p>
                                         <p>Développeur web</p>
                                     </div>
-                                    <div class="servic-card">
+                                    <div class="service-card">
                                         <p><em>Février 2022 - Juillet 2023</em></p>
                                         <p><strong>RSM Consulting Ci</strong></p>
                                         <p>Technico-commercial</p>
